Fixed weird menu spacing

--- a/webpack/scss/main.scss
+++ b/webpack/scss/main.scss
@@ -41,7 +41,7 @@ h1 {
 }
 
 .jumbotron, .minitron {
-  margin-top: -20px;
+  margin-top: -25px;
   margin-bottom: 25px;
   background-image: url(lake.jpg);
   background-position: 50% 0%;
